[build-system]
requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"

[project]
name = "tvsd"
authors = [
    {name = "Jasmine Yeung", email = "yeungjyy@gmail.com"},
]
description = "search and downloads TV and movies from websites"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["download", "tv", "search", "m3u8"]
license = {file = "LICENSE"}
classifiers = [
        # 发展时期,常见的如下
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        "Development Status :: 4 - Beta",
        # 开发的目标用户
        # "Intended Audience :: Developers",
        # 属于什么类型
        # "Topic :: Software Development :: Build Tools",
        "Topic :: Utilities",
        # 许可证信息
        "License :: OSI Approved :: MIT License",
        # 目标 Python 版本
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.11",
        # Environment
        "Environment :: Console",
]
# dependencies = [
#     "requests",
#     'importlib-metadata; python_version<"3.8"',
# ]
dynamic = ["version"]


[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/sheepyy039/tv-series-download.git"
Changelog = "https://github.com/sheepyy039/tv-series-download/blob/main/CHANGELOG.md"

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

# [project.optional-dependencies]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]

# [project.scripts]
# my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["tvsd*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = [
    "VERSION",
    "setup.py",
    "pyproject.toml:version"
]
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
annotated_tag = true