[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tvsd"
authors = ["JYYYeung <yeungjyy@gmail.com>"]
description = "search and downloads TV and movies from websites"
readme = "README.md"
keywords = ["download", "tv", "search", "m3u8"]
license = "MIT"
version = "1.4.1"
classifiers = [
  # 发展时期,常见的如下
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",
  # 开发的目标用户
  # "Intended Audience :: Developers",
  # 属于什么类型
  # "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
  # 许可证信息
  "License :: OSI Approved :: MIT License",
  # 目标 Python 版本
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  # Environment
  "Environment :: Console",
]
repository = "https://github.com/sheepyy039/TVSD.git"


packages = [
  { include = "tvsd*" }, # package names should match these glob patterns (["*"] by default)}
]
exclude = [".venv"]

[tool.poetry.urls]
# # Homepage = "https://example.com"
Documentation = "https://sheepyy039.github.io/TVSD"
Changelog = "https://github.com/sheepyy039/TVSD/blob/main/CHANGELOG.md"

[tool.poetry.scripts]
tvsd = "tvsd.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.6.0"
m3u8-To-MP4 = "^0.1.11"
multipledispatch = "^1.0.0"
beautifulsoup4 = "^4.12.2"
cloudscraper = "^1.2.71"
chinese-converter = "^1.1.1"
pytest = "^7.4.2"
docstring-parser = "^0.15"
dynaconf = "^3.2.4"
django = "^5.0.2"
django-unicorn = "^0.59.0"
django-simple-bulma = "^2.6.0"
whitenoise = "^6.6.0"
pathvalidate = "^3.2.0"
django-crispy-forms = "^2.1"
crispy-bulma = "^0.11.0"
poetry-plugin-export = "^1.8.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.10.0"
black = "^23.9.1"
pylint = "^3.0.1"
isort = "^5.12.0"

importlib-metadata = "^6.8.0"
pre-commit = "^3.6.1"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
markdown-it-py = "^3.0.0"
mkdocs-autorefs = "^0.5.0"
mkdocs-material = "^9.4.6"
mkdocs-material-extensions = "^1.3"
mkdocstrings = ">=0.23,<0.25"
mkdocstrings-python = "^1.7.3"
mkdocs-typer = "^0.0.3"
pytkdocs = { version = "^0.16.1", extras = ["google-style"] }
mkdocs-homepage-copier = "^1.0.0"
mkdocs-literate-nav = "^0.6.1"


[tool.isort]
profile = "black"

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version = "1.4.1"
tag_format = "v$version"
version_files = [
  "pyproject.toml:^version",
  "VERSION",
  "setup.py",
  "pyproject.toml:version",
]
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
annotated_tag = true
